src/main/resources/static/css/custom-tweaks.css
/* make page fill browser height */

html, body {
	display: block !important;
	height: 100% !important;
	margin: 0 !important;
}

#wrapper {
	min-height: 100% !important;
}

#page-wrapper {
	margin: auto !important;
	padding-top: 25px !important;
	min-height: 100vh !important;
}

/* fix sidebar highlights */

.side-nav li ul li {
	width: 100%;
}

/* multi select box for crud forms */

div.multi-select-box {
	max-height: 300px;
	overflow-y: auto;
}

/* add buttons margin from the bottom */

.create-button {
	margin-bottom: 15px;
}

/* modal forms height limit */

.modal-body {
    max-height: 80%;
    overflow-y: scroll;
}

/* staff role form width adjusting */

.staff-role-modal {
    min-width: 25%;
}

/* barcode icon field */

.barcode-field {
    margin-bottom: 20px;
    max-width: 95%;
    margin-left: auto;
    margin-right: auto;
}

